# ROS2-system-inspector

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
demo/: demo_system.py  sample_output.md
profiles/: demo.yaml  manipulator.yaml  turtlebot4.yaml
ros2_commissioning_check/: __init__.py  checker.py  main.py  models.py  reporter.py
